descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 20XX-XX-XX  Release 7.3X.X                                     ---
----------------------------------------------------------------------

* fixed 'in' making joint, superell, & script objects - Sean Morrison
* Creo converter always writes out CREO_NAME attribute - Sean Morrison
* improved gdiff -F filtering option behavior - Cliff Yapp
* improved gdiff command verbosity reporting options - Cliff Yapp
* improved Combination Editor button behaviors in MGED - Sean Morrison
* consistent usage taxonomy for ident-related commands - Sean Morrison
* added units label to the Archer in-scene scale graphic - Cliff Yapp
* improved output path sorting of search command - Cliff Yapp
* added 3dm-g failure message about supported versions - Cliff Yapp
* fixed bw-png writing corrupted png files on Windows - Sean Morrison


----------------------------------------------------------------------
--- 2020-07-2X  Release 7.30.10                                    ---
----------------------------------------------------------------------

* added 3dm-g failure message about supported versions - Cliff Yapp
* fixed MGED "in" command support for datums - Sean Morrison
* fixed bw-png writing corrupted png files on Windows - Sean Morrison


----------------------------------------------------------------------
--- 2020-05-08  Release 7.30.8                                     ---
----------------------------------------------------------------------

* added gchecker tool to generate MGED overlap inputs - Cliff Yapp
* improved behavior of MGED overlap checker GUI - Nick Reed
* fixed startup dimensions of overlap checker window - Nick Reed
* fixed rtedge line drawing color when using -W flag - Cliff Yapp
* added -F option to lint cmd to test specifc solid types - Cliff Yapp