@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 20XX-XX-XX  Release 7.3X.X                                     ---
 ----------------------------------------------------------------------
 
+* expanded 'bo' command docs with a DSP input example - Sean Morrison
 * fixed 'in' making joint, superell, & script objects - Sean Morrison
 * Creo converter always writes out CREO_NAME attribute - Sean Morrison
 * improved gdiff -F filtering option behavior - Cliff Yapp
